--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,3 +7,10 @@ body,
 #root {
   height: 100%;
 }
+
+.truncate-3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
